# oro-db

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md  README_MOTLITE.md
.github/workflows/: ci.yml
bench/: main.cpp  oro_bench.cpp
bench/framework/: bench_config.h  bench_stats.h  bench_util.h
bench/tpcc/: tpcc_config.h  tpcc_consistency.cpp  tpcc_consistency.h  tpcc_helper.h  tpcc_query.h  tpcc_txn.cpp  tpcc_txn.h  tpcc_workload.cpp  tpcc_workload.h
bench/ycsb/: ycsb_config.h  ycsb_generator.h  ycsb_txn.cpp  ycsb_txn.h  ycsb_workload.cpp  ycsb_workload.h
config/: mot.conf
sqlite/: oro_mot_adapter.cpp  oro_mot_adapter.h  oro_server.cpp  oro_shell.cpp  oro_sqlite.h  oro_sqlite_bestindex.cpp  oro_sqlite_conn.h  oro_sqlite_update.cpp  oro_sqlite_vtab.cpp
src/mot_core/concurrency_control/: occ_transaction_manager.cpp
src/mot_core/infra/containers/: mot_vector.h
src/mot_core/memory/: object_pool.h  object_pool_impl.h
src/mot_core/memory/garbage_collector/: mm_gc_manager.cpp
src/mot_core/storage/: row.cpp  row.h  table.cpp  table.h
src/mot_core/storage/index/: masstree_index.h
src/mot_core/storage/index/masstree/: mot_masstree_kvthread.cpp
src/mot_core/system/: mot_engine.cpp
src/mot_core/system/common/: session_context.cpp
src/mot_core/system/transaction/: txn.cpp
src/stubs/: kvthread_stub.hh  libintl.h  masstree_config.h  oro_index_factory.cpp  oro_masstree_adapter.cpp  oro_recovery_stub.cpp  oro_stub_index.h  oro_stubs.cpp  postgres.h  securec.h
src/stubs/knl/: knl_instance.h  knl_session.h  knl_thread.h
src/stubs/utils/: elog.h  memutils.h
test/: test_index.cpp  test_mot_engine.cpp  test_sqlite.cpp
